--- a/gRPC/demobr.com.representacaoexternadedados/src/main/resources/application.properties
+++ b/gRPC/demobr.com.representacaoexternadedados/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # LOCAL DATABASE
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1}:3310/sdprotobuffer
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1}:3310/sdgrpc
 spring.datasource.username=root
 spring.datasource.password=
 
